fix: Align card layout using flex-box

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
+  margin: 32px;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+.card {
+  width: 200px;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
